BackUpTwitterApp/BackUpSystem.Web/wwwroot/css/tw-acc.css
.card-tw-acc {
    padding-top: 20px;
    margin: 10px 0 20px 0;
    border-top-width: 0;
    border-bottom-width: 2px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

    .card-tw-acc .card-tw-acc-heading {
        padding: 0 20px;
        margin: 0;
    }

        .card-tw-acc .card-tw-acc-heading.simple {
            font-size: 20px;
            font-weight: 300;
            color: #777;
            border-bottom: 1px solid #e5e5e5;
        }

        .card-tw-acc .card-tw-acc-heading.image img {
            display: inline-block;
            width: 46px;
            height: 46px;
            margin-right: 15px;
            vertical-align: top;
            border: 0;
            -webkit-border-radius: 50%;
            -moz-border-radius: 50%;
            border-radius: 50%;
        }

        .card-tw-acc .card-tw-acc-heading.image .card-tw-acc-heading-header {
            display: inline-block;
            vertical-align: top;
        }

            .card-tw-acc .card-tw-acc-heading.image .card-tw-acc-heading-header h3 {
                margin: 0;
                font-size: 14px;
                line-height: 16px;
                color: #262626;
            }

            .card-tw-acc .card-tw-acc-heading.image .card-tw-acc-heading-header span {
                font-size: 12px;
                color: #999999;
            }

    .card-tw-acc .card-tw-acc-body {
        padding: 0 20px;
        margin-top: 20px;
    }

    .card-tw-acc .card-tw-acc-media {
        padding: 0 20px;
        margin: 0 -14px;
    }

        .card-tw-acc .card-tw-acc-media img {
            max-width: 100%;
            max-height: 100%;
        }

    .card-tw-acc .card-tw-acc-actions {
        min-height: 30px;
        padding: 0 20px 20px 20px;
        margin: 20px 0 0 0;
    }

    .card-tw-acc .card-tw-acc-comments {
        padding: 20px;
        margin: 0;
        background-color: #f8f8f8;
    }

        .card-tw-acc .card-tw-acc-comments .comments-collapse-toggle {
            padding: 0;
            margin: 0 20px 12px 20px;
        }

            .card-tw-acc .card-tw-acc-comments .comments-collapse-toggle a,
            .card-tw-acc .card-tw-acc-comments .comments-collapse-toggle span {
                padding-right: 5px;
                overflow: hidden;
                font-size: 12px;
                color: #999;
                text-overflow: ellipsis;
                white-space: nowrap;
            }
.unfollow-btn {
    position: relative;
    bottom: 5em;
    left: 35%;
}
.card-tw-acc-comments .media-heading {
    font-size: 13px;
    font-weight: bold;
}
.tw-acc-banner-w {
    width:100% !important;
}
.card-tw-acc.people {
    position: relative;
    display: inline-block;
    width: 170px;
    height: 300px;
    padding-top: 0;
    margin-left: 20px;
    overflow: hidden;
    vertical-align: top;
}

    .card-tw-acc.people:first-child {
        margin-left: 0;
    }

    .card-tw-acc.people .card-tw-acc-top {
        position: absolute;
        top: 0;
        left: 0;
        display: inline-block;
        width: 170px;
        height: 150px;
        background-color: #ffffff;
    }

        .card-tw-acc.people .card-tw-acc-top.green {
            background-color: #53a93f;
        }

        .card-tw-acc.people .card-tw-acc-top.blue {
            background-color: #427fed;
        }

    .card-tw-acc.people .card-tw-acc-info {
        position: absolute;
        top: 150px;
        display: inline-block;
        width: 100%;
        height: 101px;
        overflow: hidden;
        background: #ffffff;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }

        .card-tw-acc.people .card-tw-acc-info .title {
            display: block;
            margin: 8px 14px 0 14px;
            overflow: hidden;
            font-size: 16px;
            font-weight: bold;
            line-height: 18px;
            color: #404040;
        }

        .card-tw-acc.people .card-tw-acc-info .desc {
            display: block;
            margin: 8px 14px 0 14px;
            overflow: hidden;
            font-size: 12px;
            line-height: 16px;
            color: #737373;
            text-overflow: ellipsis;
        }

    .card-tw-acc.people .card-tw-acc-bottom {
        position: absolute;
        bottom: 0;
        left: 0;
        display: inline-block;
        width: 100%;
        padding: 10px 20px;
        line-height: 29px;
        text-align: center;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }
.tw-acc-banner {
    background-color: #1da1f2;
    position: relative;
    left: 10.1%;
}

.card-tw-acc-width {
    width: 247px !important;
}

.card-tw-acc.hovercard {
    position: relative;
    padding-top: 0;
    overflow: hidden;
    text-align: center;
    width: 100%;
}

    .card-tw-acc.hovercard .cardheader {
        background-size: cover;
        background-position: center center;
        height: 50vh;
        width:100%;
    }
    .card-tw-acc.hovercard .avatar {
        position: relative;
        margin-bottom: -50px;
        bottom: 13em;
    } 
.tw-acc-img {
    width:27% !important;
}

.card-tw-acc.hovercard .avatar img {
    width: 100%;
    height: auto;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
    border: 5px solid rgba(255,255,255,0.5);
}

.card-tw-acc.hovercard .info {
         padding: 4px 8px 10px;
         position: relative;
         bottom: 12em;
}

    .card-tw-acc.hovercard .info .title {
        position: relative;
        bottom: 3em;
        margin-bottom: 4px;
        font-size: 24px;
        line-height: 1;
        color: #ffffff !important;
        vertical-align: middle;
        text-transform: uppercase;
    }

        .card-tw-acc.hovercard .info .desc {
            overflow: hidden;
            font-size: 12px;
            line-height: 20px;
            color: #737373;
            text-overflow: ellipsis;
        }

    .card-tw-acc.hovercard .bottom {
        padding: 0 20px;
        margin-bottom: 17px;
    }



@media (max-width: 768px) {
    .unfollow-btn {
        position: relative;
        bottom: 2em;
        left: unset;
    }
    .tw-acc-banner-w {
    width:83% !important;
    }

    .card-tw-acc.hovercard .info .title {
        bottom: unset
    }
    .card-tw-acc.hovercard .info {
        bottom: unset;
    }
    .card-tw-acc.hovercard .avatar {
        bottom: 6em !important;
    }

.tw-acc-img {
    width: 60% !important;
}

}
@media (max-width: 320px) {
    .tw-acc-banner-w {
        width: 77% !important;
    }
}

